--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
 
-    "webhook" : "https://canary.discord.com/api/webhooks/1042076709672980522/r57fEMj3w_FmA4Fd_xmXJRv3nRBL6c9b5lM2TAGBrXhh9_y0TX2mLpxokJPgtrsloFYo",
+    "webhook" : "",
     "password": "Phantomizcool23"
 }
